[project]
name = "trmd"
version = "0.1.35"
description = "Translate Markdown using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.26.0",
]

[project.scripts]
trmd = "trmd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__", "*.rb", "uv.lock", "dist/.DS_Store", ".envrc"]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-trmd"
Issues = "https://github.com/rioriost/homebrew-trmd/issues"
