[project]
name = "trmd"
version = "0.1.38"
description = "Translate Markdown using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" },
]
dependencies = [
    "openai>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/rioriost/trmd"
Issues = "https://github.com/rioriost/trmd/issues"
Repository = "https://github.com/rioriost/trmd"

[project.scripts]
trmd = "trmd.main:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
